# githubTemplate

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  avgTime.sh  package-lock.json  package.json  package.json 
.github/: PULL_REQUEST_TEMPLATE.md  badge.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cmake.yml
scripts/: build.sh  env.sh  envActions.sh  recmake.sh  run.sh
src/: README.md  SLIC.cpp  SLIC_moreomp.cpp  SLIC_raw.cpp  slurm.sh
src/include/: sqr.h
src/lib/: sqr.cpp
tests/: CMakeLists.txt  test.cpp
